--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1322,6 +1322,7 @@ General:
   2011-2012: 1
   manuscript.)
   \item[] \textit{Probus} (Academic Year 2017-18: 1 manuscript, AY 2018-19: 1 manuscript, AY 2019-20: 1 manuscript.)
+  \item[] \textit{Synthese} (Academic Year 2022-2023: 1 manuscript.)
   \item[] \textit{Theoretical Linguistics} (Academic Year 2019-2020:1 manuscript.)
 \item[] \textit{Studies in Hispanic and Lusophone Linguistics.} (Academic Year 
   2008-2009: 1 manuscript.)
@@ -1331,7 +1332,7 @@ General:
 
 
 Book manuscripts: Oxford University Press
-(Summer 2011: one book manuscript)
+(Summer 2011: one book manuscript.)
 
 Book proposal reviewer for Wiley-Blackwell (Fall 2009: two book
 proposals; Spring 2010: one book
