--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -107,7 +107,7 @@ M.A., 2001   & Hispanic Linguistics, University of Massachusetts at Amherst\\
 \section*{Professional Experience}
 
 \begin{tabular}{p{2.815cm}p{280pt}}
-June 2023 -- &  Full Professor, Department of Linguistics\\
+June 2023 -- &  Professor, Department of Linguistics\\
  &McGill University\\
   & \\[-8pt]
 August 2016 -- &  Chair, Department of Linguistics\\
