--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1365,7 +1365,7 @@ Abstract reviewer for conferences:
 \item[] \textit{32nd Linguistic Symposium on Romance Languages}, University of Toronto.
 \item[] \textit{North East Linguistics Society} (2009 -- )
 \item[] \textit{Semantics and Linguistic Theory} (2007 --)
-\item[] Seoul International Conference on Generative Grammar (2021)
+\item[] Seoul International Conference on Generative Grammar (2021, 2023)
 \item[] \textsc{sensus}, University of Massachusetts at Amherst (2020, 2021).
 \item[] \textit{Sinn und Bedeutung} (2009 -- ).
 \item[] \textit{West Coast Conference on Formal Linguistics} (2012 -- )
