JUne 2012, grant review

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1379,7 +1379,7 @@ Reviewer for funding agencies:
   \item[] Israel Science Foundation (one grant proposal, 2016)
   \item[] Leibniz Association (Germany) (one grant proposal, 2017)
   \item[] National Science Foundation (one proposal, 2011)
-  \item[] Pontificia Universidad Cat\'olica del Per\'u (internal grants, one grant proposal 2016)
+  \item[] Pontificia Universidad Cat\'olica del Per\'u (internal grants, one grant proposal 2016, one grant proposal 2023)
   \item[] Social Sciences and Humanities Research Council (one grant proposal, 2020)
   \end{itemize}
 
