--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -370,6 +370,11 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
+Alonso-Ovalle, Luis and Aron Hirsch. forthcoming. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
+
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
+
+
 Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Universal Force from Exhaustification: Farsi \textit{Hame -i} DPs, \textit{Proceedings of the Thirty-Second Semantics and Linguistic Theory Conference}, ed. by John R. Starr, Juhyae Kim and Burak \"{O}ney, CLC Publications, Cornell University, pp. 619-638. %\\ \hspace*{\fill} \href{https://doi.org/10.3765/salt.v1i0.5401}{https://doi.org/10.3765/salt.v1i0.5401}
 
 
@@ -768,6 +773,8 @@ Men\'endez-Benito), \textit{Workshop on Reference and Discourse
 ``Cuervo en el panorama ling\"{u}\'istico europeo de fin de siglo'', \textit{51st Annual Kentucky Foreign Language Conference}, University of Kentucky, Lexington, KY, 1998. 
 
 \subsubsection*{Poster Presentations}
+
+``On the natural language metaphysics of numbers'' (with Bernhard Schwarz), \textit{Sinn und Bedeutung 19}, University of Bochum, September 6, 2023.
 
 ``Structural ambiguity in pseudo-partitives:
 the case of quantity nouns'' (with Bernhard Schwarz), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
