--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -647,6 +647,8 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``DPs with quantity nouns are structurally ambiguous'' (with Bernhard Schwarz), \textit{Novel Semantic Research in Theory, Processing and L1 Acquisition}, University of Groningen, October 20, 2023.
+
 ``Weakening is external to \textit{only}'' (with Aron Hirsch), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
 
 ``Universal Force from Exhaustification:
