--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -920,9 +920,9 @@ Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
 
 \subsubsection*{Committee Member}
 
-Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen.
+Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen (succesfully defended, October 19, 2023.)
 
-Alanah McKillen, ``On the interpretation of reflexive pronouns'', (succesfully defended in March 2016).
+Alanah McKillen, ``On the interpretation of reflexive pronouns'', (succesfully defended in March 2016.)
 
 Tokiko Okuma, ``Overt Pronoun Constraint Effects in Second Language Japanese'', (successfully defended in April 2015.)
 
