--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -231,7 +231,7 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 \subsection*{Journal Articles}
 
 
-Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. (forthcoming) Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}.
+Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. (2023) Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
 
 
 Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (2023) Concessive Scalar Particles:
