--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -230,6 +230,8 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. (to appear) Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}.
+
 
 Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. (2023) Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
 
@@ -369,6 +371,11 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 % \end{revnumerate}
 
 \subsection*{Proceedings Papers}
+
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eights Annual} Sinn und Bedeutung \textit{Conference},
+
+
+Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
 
 Alonso-Ovalle, Luis and Aron Hirsch. forthcoming. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
 
@@ -1388,7 +1395,7 @@ Reviewer for funding agencies:
   \item[] Israel Science Foundation (one grant proposal, 2016)
   \item[] Leibniz Association (Germany) (one grant proposal, 2017)
   \item[] National Science Foundation (one proposal, 2011)
-  \item[] Pontificia Universidad Cat\'olica del Per\'u (internal grants, one grant proposal 2016, one grant proposal 2023)
+  \item[] Pontificia Universidad Cat\'olica del Per\'u (internal grants, one grant proposal 2016, one grant proposal 2023; research projects: 2024 competition, nine proposals.)
   \item[] Social Sciences and Humanities Research Council (one grant proposal, 2020)
   \end{itemize}
 
