--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -372,10 +372,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eights Annual} Sinn und Bedeutung \textit{Conference},
-
-
-Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eights Annual} Sinn und Bedeutung \textit{Conference}.
 
 Alonso-Ovalle, Luis and Aron Hirsch. forthcoming. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
 
