SALT 33 page numbers

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -376,7 +376,7 @@ Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language M
 
 Alonso-Ovalle, Luis and Aron Hirsch. forthcoming. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 603-621. %https://doi.org/10.3765/dxn8d863
 
 
 Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Universal Force from Exhaustification: Farsi \textit{Hame -i} DPs, \textit{Proceedings of the Thirty-Second Semantics and Linguistic Theory Conference}, ed. by John R. Starr, Juhyae Kim and Burak \"{O}ney, CLC Publications, Cornell University, pp. 619-638. %\\ \hspace*{\fill} \href{https://doi.org/10.3765/salt.v1i0.5401}{https://doi.org/10.3765/salt.v1i0.5401}
