SAtl page numbers 2

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -374,7 +374,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eights Annual} Sinn und Bedeutung \textit{Conference}.
 
-Alonso-Ovalle, Luis and Aron Hirsch. forthcoming. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}.
+Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 583-602.
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 603-621. %https://doi.org/10.3765/dxn8d863
 
