--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -651,6 +651,9 @@ University of T\"ubingen, January 2010 [presented by co-author.]
 
 \subsubsection*{Papers Delivered}
 
+``Higher order quantification outside questions: the case of free relatives'', \textit{Fifty-Fourth
+  Meeting of the North East Linguistic Society}, MIT, January 26, 2024.
+
 ``DPs with quantity nouns are structurally ambiguous'' (with Bernhard Schwarz), \textit{Novel Semantic Research in Theory, Processing and L1 Acquisition}, University of Groningen, October 20, 2023.
 
 ``Weakening is external to \textit{only}'' (with Aron Hirsch), \textit{Thirty-Third Semantics and Linguistic Theory Conference}, Yale University, May 12, 2023.
