--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -233,12 +233,12 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. (to appear) Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}.
 
 
-Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. (2023) Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
+Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. 2023. Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
 
 
-Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. (2023) Concessive Scalar Particles:
+Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. 2023. Concessive Scalar Particles:
 Symmetric vs. Non-Symmetric Alternatives.
-The Case of Spanish \textit{Siquiera}, \textit{Glossa: A Journal of General Linguistics}, 8(1). \href{https://doi.org/10.16995/glossa.8574}{https://doi.org/10.16995/glossa.8574}
+The Case of Spanish \textit{Siquiera}, \textit{Glossa: A Journal of General Linguistics}, 8(1), 1-42. \href{https://doi.org/10.16995/glossa.8574}{https://doi.org/10.16995/glossa.8574}
 
  
 Alonso-Ovalle, Luis \textit{\&} Aron Hirsch. 2022. Keep \textit{Only} Strong,  \textit{Semantics and Pragmatics}, 15(6). \href{https://doi.org/10.3765/sp.15.6}{https://doi.org/10.3765/sp.15.6}
@@ -372,7 +372,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eights Annual} Sinn und Bedeutung \textit{Conference}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eight Annual} Sinn und Bedeutung \textit{Conference}.
 
 Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 583-602.
 
@@ -386,7 +386,7 @@ Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and In
 
 Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. 2022. Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 15-28.
 
-Alonso-Ovalle, Luis and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
+Alonso-Ovalle, Luis, Esmail Mogiseh and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
 
 Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: \textit{Yalnhej} DPs in Chuj, \textit{Proceedings of the Thirty-First Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr, CLC Publications, Cornell University, pp. 061-081.
 
@@ -919,6 +919,8 @@ Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'',
 
 \subsubsection*{In progress}
 
+Terrance Gatchalian, ``Temporal markers in Kanienk\'eha'' (co-supervised with Jessica Coon).
+
 William Johnston, ``Serial Verb Constructions in Hmong,'' (co-supervised with Jessica Coon, in progress.) 
 
 Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
@@ -927,7 +929,7 @@ Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
 
 \subsubsection*{Committee Member}
 
-Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen (succesfully defended, October 19, 2023.)
+Elizabeth Heredia-Murillo, University of Nantes / University of Gr\"{o}ningen ``The semantics and L1 acquisition of scalar (focus) particles: the case of Spanish \textit{(ni) siquiera} and \textit{incluso}'' (succesfully defended, October 19, 2023.)
 
 Alanah McKillen, ``On the interpretation of reflexive pronouns'', (succesfully defended in March 2016.)
 
@@ -936,6 +938,8 @@ Tokiko Okuma, ``Overt Pronoun Constraint Effects in Second Language Japanese'', 
 Alexandra Simonenko, ``Grammatical Ingredients of Definiteness'',
 (successfully defended in April 2014.)
 \vspace{-10pt}
+
+
 
 
 \subsubsection*{Evaluation Papers}
@@ -982,8 +986,13 @@ Jonathan Palucci, ``On the Scope Effects of \textit{Any}.'', (successfully defen
 Jonathan Palucci, ``Modal Ingredients of \textit{Have}: Disentangling Causers from Engineers'' (eval 2, co-supervised with Jessica Coon, successfully defended on April 7, 2022).
 
 
-%\subsubsection*{In Progress}
+\subsubsection*{In Progress}
 
+Luan\'e Lennox, ``Javanese \textsc{sing}'' (co-supervised with Junko Shimoyama).
+
+Willie Mayers, ``Number marking in Kanienk\'eha''  (co-supervised with Alan Bale).
+
+Katya Morgunova, ``Negation in Kanien\'eha'' (co-supervised with Jessica Coon).
 
 
 \subsubsection*{Committee Member}
