--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -372,7 +372,7 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eight Annual} Sinn und Bedeutung \textit{Conference}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}.
 
 Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 583-602.
 
@@ -552,6 +552,8 @@ Alonso-Ovalle, Luis. (ed.) 2003. \emph{On Semantic Processing, University of Mas
 
 
 \subsection*{Invited Talks}
+
+``Quantity DPs: Decoupling Quantities from Entities'', (with Bernhard Schwarz), El Colegio de M\`exico, Mexico City, April 25, 2024.
 
 ``Singular Bare Interrogatives: a Case for Higher Order Quantification, a Weak Singular and Strong Plural'', (with Vincent Rouillard), S\'eminaire SynSem, Laboratoire de Linguistique, University of Nantes, France, April 1, 2022.
 
@@ -1133,6 +1135,9 @@ Prof.\ Barbara H. Partee. Duties included grading, preparing and teaching severa
  including syllabus, teaching materials and evaluation of students.
 
 \subsection*{\textbf{Other}}
+
+
+24-25 April, 2024, ``Introducci\'on a la modalidad'' (Introduction to Modality), six hours, Universidad Nacional Aut\'onoma de M\'exico, Mexico City.
 
 29-31 March, 2022, six-hour workshop on intensional semantics, Laboratoire de Linguistique, University of Nantes. 
 
