page number JoS

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -233,7 +233,7 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. 2024. Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}. \href{https://doi.org/10.1007/s11050-023-09218-9}{https://doi.org/10.1007/s11050-023-09218-9}
 
 
-Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. 2023. Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
+Alonso-Ovalle, Luis \textit{\&} Vincent Rouillard. 2023. Spanish Bare Interrogatives and Number, \textit{Journal of Semantics}, (1-2), 289--309. \href{https://doi.org/10.1093/jos/ffad008}{https://doi.org/10.1093/jos/ffad008}
 
 
 Alonso-Ovalle, Luis \textit{\&} Elizabeth Heredia-Murillo. 2023. Concessive Scalar Particles:
