--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -372,6 +372,8 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
+Alonso-Ovalle, Luis. forthcoming. Higher-Order Quantification outside Questions: The Case of Free Relatives, \textit{Proceedings of the Fifty-Forth Annual Meeting of the North East Linguistic Society}.
+
 Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}.
 
 Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 583-602.
