--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -1183,6 +1183,7 @@ CGS Master's Scholarships Evaluation Committee, \textit{Graduate and
 Served as a pro-dean in the following dissertation defenses:
 
 \begin{itemize}
+  \item Korin Sahinyan, Department of Human Genetics, June 18, 2024.
 \item Kate E. Rath-Wilson, Department of Neuroscience, July 6, 2015.
 \item Christopher Mount, Department of Integrated Studies in
   Education, December 6, 2012.
