S&P article with Royer

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -230,6 +230,9 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semantic Variation: Lessons from Chuj, 17, \textit{Semantics and Pragmatics}. \href{https://doi.org/10.3765/sp.17.12}{https://doi.org/10.3765/sp.17.12}
+
+
 Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. 2024. Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}. \href{https://doi.org/10.1007/s11050-023-09218-9}{https://doi.org/10.1007/s11050-023-09218-9}
 
 
