--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -906,16 +906,18 @@ LLCU 610: Fundamentals of Linguistics for Language Teaching (Winter 2013.)
 
 \subsubsection*{Completed}
 
-Brian Buccola, ``Maximality in the Semantics of Modified Numerals", (co-supervised with Bernhard Schwarz, successfully defended in August 2015.)
+Brian Buccola, ``Maximality in the Semantics of Modified Numerals" (co-supervised with Bernhard Schwarz, successfully defended in August 2015.)
 
-Francesco Gentile, ``Non-Local Modification'', (co-supervised with Bernhard Schwarz and Junko Shimoyama, successfully defended on December 9, 2019.)
+Francesco Gentile, ``Non-Local Modification'' (co-supervised with Bernhard Schwarz and Junko Shimoyama, successfully defended on December 9, 2019.)
 
-Dan Goodhue, ``On Asking and Answering Biased Polar Questions", (co-supervised with Bernhard Schwarz and Michael Wagner, successfully defended in February 2018.)
+Dan Goodhue, ``On Asking and Answering Biased Polar Questions" (co-supervised with Bernhard Schwarz and Michael Wagner, successfully defended in February 2018.)
 
-Jozina van der Klok, ``Tense and Aspect Markers in Javanese'',
-(co-supervised with Lisa Travis, successfully defended in November
+William Johnston, ``Event Structure and Serial Verbs in Hmong'' (co-supervised with Jessica Coon, successfully defended on August 13, 2024.)
+
+Jozina van der Klok, ``Tense and Aspect Markers in Javanese'' (co-supervised with Lisa Travis, successfully defended in November
 2012.)
-
+ 
+Esmail Moghiseh, ``Free Choice Items : The View from Farsi'' (succesfully defended on June 20, 2024.)
 
 Mathieu Paill\'e, ``Local Exh'', (co-supervised with Bernhard Schwarz, successfully defended in August 2022, K. B. Jenkes Prize, Graduate and Postdoctoral Studies, McGill University.)
 
@@ -927,10 +929,6 @@ Justin Royer, ``Elements of (In)definiteness and Binding: A Mayan Perspective'',
 \subsubsection*{In progress}
 
 Terrance Gatchalian, ``Temporal markers in Kanienk\'eha'' (co-supervised with Jessica Coon).
-
-William Johnston, ``Serial Verb Constructions in Hmong,'' (co-supervised with Jessica Coon, in progress.) 
-
-Esmail Moghiseh, ``Free Choice in Farsi'', (in progress)
 
 \vspace{-10pt}
 
