MA theses in progress

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -971,6 +971,8 @@ Will Johnston, ``\textit{Again} and Intensional Transitive Verbs'', (co-supervis
 Oriana Kilbourn-Cer\'on, ``\textit{Almost}'', (co-supervised with Bernhard Schwarz,
 successfully defended in August 2013.) 
 
+%Luan\'e Lennox, ``Javanese \textsc{sing}'' (co-supervised with Junko Shimoyama, defended in ).
+
 Gretchen McCulloch, ``Modal Indefinites in Mi'gmaq: \textit{Tampas}'', (defended in July 2013.)
 
 Alanah McKillen, ``Focus and Binding'' (co-supervised with Yosef
@@ -993,7 +995,6 @@ Jonathan Palucci, ``Modal Ingredients of \textit{Have}: Disentangling Causers fr
 
 \subsubsection*{In Progress}
 
-Luan\'e Lennox, ``Javanese \textsc{sing}'' (co-supervised with Junko Shimoyama).
 
 Willie Mayers, ``Number marking in Kanienk\'eha''  (co-supervised with Alan Bale).
 
@@ -1022,7 +1023,7 @@ Jared Kabbara, School of Computer Science, dissertation proposal defence, Dec 6.
 
 Aron Hirsch, September 2017 -- May 2019 , SSHRC postdoctoral fellow (co-supervised with Bernhard Schwarz and Michael Wagner.)
 
-\subsection*{MA Research Papers}
+\subsection*{MA Research Papers / Theses}
 
 \subsubsection*{Supervisor}
 
@@ -1032,7 +1033,12 @@ Jonathan Palucci, ``On the Scope of \textit{Any}'' (fast-tracked to Ph.D. progra
 
 \subsubsection*{Co-Supervisor}
 
-Jason Borga, ``Topics on sluicing'', (Co-supervised with Aron Hirsch and Bernhard Schwarz.)
+Jason Borga, ``Topics on sluicing'', (co-supervised with Aron Hirsch and Bernhard Schwarz.)
+
+
+\subsubsection*{In Progress}
+
+Brandon Chaperon, ``Instrumental/Causative and Benefactive/Causative syncretisms in Wolof'', (co-supervised with Martina Martinovi\'c.)
 
 \subsection*{Undergraduate Honors Theses (Supervisor)}
 
