--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -230,7 +230,7 @@ Joseph P. Healey Grant Program (AY 2007-2009), Office of the Vice Provost for Re
 
 \subsection*{Journal Articles}
 
-Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semantic Variation: Lessons from Chuj, 17, \textit{Semantics and Pragmatics}. \href{https://doi.org/10.3765/sp.17.12}{https://doi.org/10.3765/sp.17.12}
+Alonso-Ovalle, Luis \textit{\&} Justin Royer. 2024. Modal Indefinites and Semantic Variation: Lessons from Chuj, \textit{Semantics and Pragmatics}, 17. \href{https://doi.org/10.3765/sp.17.12}{https://doi.org/10.3765/sp.17.12}
 
 
 Alonso-Ovalle, Luis; Paula Men\'endez-Benito \textit{\&} Aynat Rubinstein. 2024. Eventive Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Natural Language Semantics}. \href{https://doi.org/10.1007/s11050-023-09218-9}{https://doi.org/10.1007/s11050-023-09218-9}
@@ -1382,13 +1382,15 @@ proposal; Fall 2012: one book proposal; Fall 2015: one book proposal; Winter 201
 Reviewer for the Real Academia Espa\~nola (chapters 19 and 20 of the \textit{Nueva gramática de la lengua española} April, 2021.)
 
 Reviewed section manuscripts for edited volumes: 
+
 \begin{itemize}
+  \item[] \textit{Advances in Formal Slavic Linguistics 2023}, Language Science Press (1 chapter, 2024).
+  \item[] Edited volume on the use of alternatives in semantics (ed. by Daniel Althuser) (1 chapter, 2020.)
 \item[] \textit{Wiley Blackwell Semantics Companion}, Wiley-Blackwell, edited by Lisa Matthewson \textit{et al.}
 \item[] \textit{Handbook on Information Structure} (ed. by Caroline F\'try and Shin Ishihare) (1 section, 2014).
 \item[] \textit{Modality across Syntactic Categories} (ed. by Mar\'ia Luisa Rivero, Ana Arregui and Andr\'es Salanova), 1 section.
 \item[] \textit{Alternatives in Semantics} (ed. by Anamaria Falaus) (2
   sections, 2011).
-  \item [] Edited volume on the use of alternatives in semantics (ed. by Daniel Althuser) (1 chapter, 2020.)
 \item[] \textit{Proceedings of the 41th Linguistic Symposium on
     Romance Languages} (ed. by Eric Mathieu \textit{et al.}, 1
   section, 2011).
