--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -381,7 +381,7 @@ Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language M
 
 Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 583-602.
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 603-621. %https://doi.org/10.3765/dxn8d863
+Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, CLC Publications, Cornell University, pp. 603-621. %https://doi.org/10.3765/dxn8d863
 
 
 Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Universal Force from Exhaustification: Farsi \textit{Hame -i} DPs, \textit{Proceedings of the Thirty-Second Semantics and Linguistic Theory Conference}, ed. by John R. Starr, Juhyae Kim and Burak \"{O}ney, CLC Publications, Cornell University, pp. 619-638. %\\ \hspace*{\fill} \href{https://doi.org/10.3765/salt.v1i0.5401}{https://doi.org/10.3765/salt.v1i0.5401}
@@ -391,7 +391,8 @@ Alonso-Ovalle, Luis and Esmail Moghiseh. 2022. Farsi \textit{Hame -i} DPs and In
 
 Alonso-Ovalle, Luis, Paula Men\'endez-Benito and Aynat Rubinstein. 2022. Event-Dependent Modal Projection: The Case of Spanish Subjunctive Relative Clauses, \textit{Proceedings of the Fifty-Second Annual Meeting of the North East Linguistic Society}, ed. by \"{O}zge Bakay, Breanna Pratley, Eva Neu and Peyton Deal, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp 15-28.
 
-Alonso-Ovalle, Luis, Esmail Mogiseh and Jonathan Palucci. (forthcoming) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}.
+Alonso-Ovalle, Luis, Esmail Mogiseh and Jonathan Palucci. 2024 (based on 2021 presentation) Obligatory Wide Scope for \textit{Any} DPs?, \textit{Proceedings of the Thirty-Ninth West Coast Conference on Formal Linguistics}, ed. by Robert Autry, Gabriela de la Cruz, Luis A. Irizarry Figueroa, Kristina Mihajlovic, Tianyi Ni, Ryan Smith, and Heidi Harley, Cascadilla Proceedings Project, Somerville, MA: pp. 432-440.
+
 
 Alonso-Ovalle, Luis and Justin Royer. 2021. Modality in the Nominal Domain: \textit{Yalnhej} DPs in Chuj, \textit{Proceedings of the Thirty-First Semantics and Linguistic Theory Conference}, ed. by Nicole Dreier, Chloe Kwon, Thomas Darnell, and John Starr, CLC Publications, Cornell University, pp. 061-081.
 
