--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -375,6 +375,9 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of Twenty-Fourth Amsterdam Colloquium}.
+
+
 Alonso-Ovalle, Luis. forthcoming. Higher-Order Quantification outside Questions: The Case of Free Relatives, \textit{Proceedings of the Fifty-Forth Annual Meeting of the North East Linguistic Society}.
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}.
