NELS, SuB page numbers

--- a/alonso-ovalle-cv.tex
+++ b/alonso-ovalle-cv.tex
@@ -375,14 +375,15 @@ Alonso-Ovalle, Luis. 2000. Is the `Arbitrary Interpretation' a Semantic Epipheno
 
 \subsection*{Proceedings Papers}
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of Twenty-Fourth Amsterdam Colloquium}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. To Compose a Number is to Compose a Cardinality: Evidence from Intensional Contexts, \textit{Proceedings of the Twenty-Fourth Amsterdam Colloquium}.
 
 
-Alonso-Ovalle, Luis. forthcoming. Higher-Order Quantification outside Questions: The Case of Free Relatives, \textit{Proceedings of the Fifty-Forth Annual Meeting of the North East Linguistic Society}.
+Alonso-Ovalle, Luis. forthcoming. Higher-Order Quantification outside Questions: The Case of Free Relatives, \textit{Proceedings of the Fifty-Forth Annual Meeting of the North East Linguistic Society}, ed. by Shaunak Phadnis, Carla Spellerberg and Brynne Wilkinson, University of Massachusetts, Amherst, MA: Graduate Linguistics Student Association, pp. 45-59.
 
-Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}.
+Alonso-Ovalle, Luis and Bernhard Schwarz. forthcoming. On the Natural Language Metaphysics of Amounts, \textit{Proceedings of the Twenty-Eighth Annual} Sinn und Bedeutung \textit{Conference}, ed. by Geraldine Baumann, Daniel Gutzmann, Jonas Koopman, Kristina Liefke, Agata Renans and Tatjana Scheffler, Ruhr-University Bochum, pp. 18-35.
 
-Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, LC Publications, Cornell University, pp. 583-602.
+
+Alonso-Ovalle, Luis and Aron Hirsch. 2024. Weakening is External to \textit{Only}, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, CLC Publications, Cornell University, pp. 583-602.
 
 Alonso-Ovalle, Luis and Bernhard Schwarz. 2024. Structural Ambiguity in Pseudo-Partitives: the Case of Quantity Nouns, \textit{Proceedings of the Thirty-Third Semantics and Linguistic Theory Conference}, ed. by Juhyae Kim, Burak \"{O}ney, Yao Zhang, and Fengyue (Lisa) Zhao, CLC Publications, Cornell University, pp. 603-621. %https://doi.org/10.3765/dxn8d863
 
